# helloworld-qt-xc

./: .gitignore  CHANGELOG.md  CMakeLists.txt  README.md  changelog.md  version.h
doc/: structuring.md
script/: build_android.sh  build_linux_windows.sh  build_web.sh
source/: main.cpp
source/android/: CMakeLists.txt
source/ui/: main.qml
web/: CMakeLists.txt
